--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
 
 							<p>Let's make something cool together! Do not hesitate to contact me with your questions or offers using the form bellow.</p>
 
-							<form method="post" action="#">
+							<form method="post" action="contact_form">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
