add content to profile section

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,44 +83,36 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="../static/images/pic02.jpg" alt="" /></a>
+										<a href="http://d3pl56a9i8jlog.cloudfront.net" class="image fit"><img src="../static/images/cookbook.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>cookbook</h3>
+											<p>Users can store and share their recepies.</p>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="../static/images/pic03.jpg" alt="" /></a>
+										<a href="https://github.com/galubezzz/blog" class="image fit"><img src="../static/images/blog.png" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="../static/images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="../static/images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Simple blog</h3>
+											<p>Users can create blog posts, leave comments and vote for the posts.</p>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="../static/images/pic06.jpg" alt="" /></a>
+										<a href="https://geo-pins-galubezzz.vercel.app/" class="image fit"><img src="../static/images/geopins.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>GeoPins</h3>
+											<p>User can create pins on a map and leave comments for other pins.</p>
 										</header>
 									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="../static/images/pic07.jpg" alt="" /></a>
+										<a href="https://github.com/galubezzz/burger" class="image fit"><img src="../static/images/burger.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Burger builder</h3>
 										</header>
+										<p>Small app that allows to build your burger in fun way.</p>
 									</article>
 								</div>
 							</div>
@@ -138,7 +130,7 @@
 
 							<a href="#" class="image featured"><img src="../static/images/pic08.jpg" alt="" /></a>
 
-							<p>I'm Maria, Seattle based software developer. </p>
+							<p>I'm Maria, Seattle based software developer. I like coding and cats)</p>
 
 						</div>
 					</section>
