--- a/templates/index.html
+++ b/templates/index.html
@@ -83,14 +83,14 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="http://d3pl56a9i8jlog.cloudfront.net" class="image fit"><img src="../static/images/cookbook.png" alt="" /></a>
+										<a href="http://d3pl56a9i8jlog.cloudfront.net" class="image fit"><img src="../static/images/cookbook.jpg" alt="" /></a>
 										<header>
 											<h3>cookbook</h3>
 											<p>Users can store and share their recepies.</p>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/galubezzz/blog" class="image fit"><img src="../static/images/blog.png" alt="" /></a>
+										<a href="https://github.com/galubezzz/blog" class="image fit"><img src="../static/images/blog.jpg" alt="" /></a>
 										<header>
 											<h3>Simple blog</h3>
 											<p>Users can create blog posts, leave comments and vote for the posts.</p>
@@ -99,7 +99,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://geo-pins-galubezzz.vercel.app/" class="image fit"><img src="../static/images/geopins.png" alt="" /></a>
+										<a href="https://geo-pins-galubezzz.vercel.app/" class="image fit"><img src="../static/images/geopins.jpg" alt="" /></a>
 										<header>
 											<h3>GeoPins</h3>
 											<p>User can create pins on a map and leave comments for other pins.</p>
