--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="../static/images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="../static/images/about.jpg" alt="" /></a>
 
 							<p>I'm Maria, Seattle based software developer. I like coding and cats)</p>
 
