--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,8 @@
 									<article class="item">
 										<a href="http://d3pl56a9i8jlog.cloudfront.net" class="image fit"><img src="../static/images/cookbook.jpg" alt="" /></a>
 										<header>
-											<h3>cookbook</h3>
+											<h3>Cookbook</h3>
+											<p>Python, Django, JavaScript, React, PostgreSQL</p>
 											<p>Users can store and share their recepies.</p>
 										</header>
 									</article>
@@ -93,6 +94,7 @@
 										<a href="https://github.com/galubezzz/blog" class="image fit"><img src="../static/images/blog.jpg" alt="" /></a>
 										<header>
 											<h3>Simple blog</h3>
+											<p>Python, Django</p>
 											<p>Users can create blog posts, leave comments and vote for the posts.</p>
 										</header>
 									</article>
@@ -102,6 +104,7 @@
 										<a href="https://geo-pins-galubezzz.vercel.app/" class="image fit"><img src="../static/images/geopins.jpg" alt="" /></a>
 										<header>
 											<h3>GeoPins</h3>
+											<p>JavaScript, React, GraphQL, MongoDB</p>
 											<p>User can create pins on a map and leave comments for other pins.</p>
 										</header>
 									</article>
@@ -111,8 +114,9 @@
 										<a href="https://github.com/galubezzz/burger" class="image fit"><img src="../static/images/burger.jpg" alt="" /></a>
 										<header>
 											<h3>Burger builder</h3>
+											<p>JavaScript, React, Redux</p>
+											<p>Small app that allows to build your burger in fun way.</p>
 										</header>
-										<p>Small app that allows to build your burger in fun way.</p>
 									</article>
 								</div>
 							</div>
