--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -114,6 +114,7 @@ input, select, textarea {
 		font-weight: 300;
 		color: #666;
 		line-height: 1.5em;
+		font-weight: bold;
 	}
 
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -257,6 +258,15 @@ input, select, textarea {
 			}
 
 		}
+	.langs{
+		font-size: 0.8em;
+		padding: 0.5em;
+	}
+	.description{
+		font-size: 0.8em;
+		font-style: italic;
+		padding: 0.5em;
+	}
 
 /* Row */
 
