add classes for portfolio section

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,16 +86,16 @@
 										<a href="http://d3pl56a9i8jlog.cloudfront.net" class="image fit"><img src="../static/images/cookbook.jpg" alt="" /></a>
 										<header>
 											<h3>Cookbook</h3>
-											<p>Python, Django, JavaScript, React, PostgreSQL</p>
-											<p>Users can store and share their recepies.</p>
+											<div class="langs">Python, Django, JavaScript, React, PostgreSQL</div>
+											<div class="description">Users can store and share their recepies.</div>
 										</header>
 									</article>
 									<article class="item">
 										<a href="https://github.com/galubezzz/blog" class="image fit"><img src="../static/images/blog.jpg" alt="" /></a>
 										<header>
 											<h3>Simple blog</h3>
-											<p>Python, Django</p>
-											<p>Users can create blog posts, leave comments and vote for the posts.</p>
+											<div class="langs">Python, Django</div>
+											<div class="description">Users can create blog posts, leave comments and vote for the posts.</div>
 										</header>
 									</article>
 								</div>
@@ -104,8 +104,8 @@
 										<a href="https://geo-pins-galubezzz.vercel.app/" class="image fit"><img src="../static/images/geopins.jpg" alt="" /></a>
 										<header>
 											<h3>GeoPins</h3>
-											<p>JavaScript, React, GraphQL, MongoDB</p>
-											<p>User can create pins on a map and leave comments for other pins.</p>
+											<div class="langs">JavaScript, React, GraphQL, MongoDB</div>
+											<div class="description">User can create pins on a map and leave comments for other pins.</div>
 										</header>
 									</article>
 								</div>
@@ -114,8 +114,8 @@
 										<a href="https://github.com/galubezzz/burger" class="image fit"><img src="../static/images/burger.jpg" alt="" /></a>
 										<header>
 											<h3>Burger builder</h3>
-											<p>JavaScript, React, Redux</p>
-											<p>Small app that allows to build your burger in fun way.</p>
+											<div class="langs">JavaScript, React, Redux</div>
+											<div class="description">Small app that allows to build your burger in fun way.</div>
 										</header>
 									</article>
 								</div>
